--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.CAMERA"/>
 
     <application
-        android:label="tech_media"
+        android:label="Socialee"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
