--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -27,42 +27,29 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  flutter:
-    sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  cloud_firestore: ^4.3.0
   cupertino_icons: ^1.0.2
-  provider: ^6.0.3
-  fluttertoast: ^8.0.9
   firebase_auth: ^4.1.5
-  firebase_storage: ^11.0.6
-  image_picker: ^0.8.5+3
   firebase_core: ^2.3.0
   firebase_database: ^10.0.6
-  
+  firebase_storage: ^11.0.6
+  flutter:
+    sdk: flutter
   flutter_svg: ^1.1.5
-
-
+  fluttertoast: ^8.0.9
+  image_picker: ^0.8.5+3
+  persistent_bottom_nav_bar: ^5.0.2
+  provider: ^6.0.3
 
 dev_dependencies:
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^2.0.0
-
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -72,13 +59,10 @@ flutter:
   assets:
     - assets/images/
 
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
@@ -91,13 +75,12 @@ flutter:
     - family: SF-Pro-Display-Regular
       fonts:
         - asset: assets/fonts/SF-Pro-Display-Regular.otf
-    - family:  SF-Pro-Display-Light
+    - family: SF-Pro-Display-Light
       fonts:
         - asset: assets/fonts/SF-Pro-Display-Light.otf
 
-    - family:  SF-Pro-Display-Medium
+    - family: SF-Pro-Display-Medium
       fonts:
         - asset: assets/fonts/SF-Pro-Display-Medium.otf
-
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
